nickel-lang/tests/integration/fail/string_interpolation_number.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::TypeError'
"bad type %{1 + 1}"